fix { fixed scrollbar, locks layout }

--- a/car-pool/public/style.css
+++ b/car-pool/public/style.css
@@ -14,6 +14,7 @@ body {
   position: relative;
   font-size: 62.5%;
   padding: 0.5rem;
+  overflow-y: scroll;
 }
 
 div#root {
